--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
     "eject": "react-scripts eject"
   },
   "devDependencies": {
-    "eslint-config-airbnb-typescript": "^12.3.1"
+    "eslint-config-airbnb-typescript": "^12.3.1",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-prettier": "^3.4.1",
+    "prettier": "^2.3.2"
   },
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.4",
@@ -20,10 +23,13 @@
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
     "@types/react-router-dom": "^5.1.8",
+    "node-sass": "^4.14.1",
+    "prettier-plugin-style-order": "^0.2.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "recoil": "^0.4.1",
     "typescript": "^4.1.2",
     "web-vitals": "^1.0.1"
   },
