--- a/package.json
+++ b/package.json
@@ -9,10 +9,19 @@
     "eject": "react-scripts eject"
   },
   "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^4.30.0",
+    "@typescript-eslint/eslint-plugin-tslint": "^4.30.0",
+    "@typescript-eslint/parser": "^4.30.0",
+    "babel-plugin-root-import": "^6.6.0",
+    "eslint": "^7.32.0",
+    "eslint-config-airbnb": "^18.2.1",
     "eslint-config-airbnb-typescript": "^12.3.1",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^3.4.1",
-    "prettier": "^2.3.2"
+    "eslint-plugin-react": "^7.25.1",
+    "eslint-plugin-react-hooks": "^4.2.0",
+    "prettier": "^2.3.2",
+    "react-app-rewired": "^2.1.8"
   },
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.4",
@@ -27,10 +36,14 @@
     "prettier-plugin-style-order": "^0.2.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-icons": "^4.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "react-wheelpicker": "^1.0.8",
     "recoil": "^0.4.1",
-    "typescript": "^4.1.2",
+    "recoil-persist": "^3.0.0",
+    "swiper": "^6.8.4",
+    "typescript": "^4.4.2",
     "web-vitals": "^1.0.1"
   },
   "eslintConfig": {
