--- a/package.json
+++ b/package.json
@@ -32,16 +32,23 @@
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
     "@types/react-router-dom": "^5.1.8",
+    "bootstrap": "^5.1.0",
+    "history": "^5.0.1",
     "node-sass": "^4.14.1",
     "prettier-plugin-style-order": "^0.2.2",
     "react": "^17.0.2",
+    "react-bootstrap": "^2.0.0-beta.6",
+    "react-cookie": "^4.1.1",
     "react-dom": "^17.0.2",
+    "react-floating-label-input": "^4.3.2",
     "react-icons": "^4.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "react-simple-captcha": "^8.2.0",
     "react-wheelpicker": "^1.0.8",
     "recoil": "^0.4.1",
     "recoil-persist": "^3.0.0",
+    "styled-components": "^5.3.1",
     "swiper": "^6.8.4",
     "typescript": "^4.4.2",
     "web-vitals": "^1.0.1"
