--- a/package.json
+++ b/package.json
@@ -32,12 +32,13 @@
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
     "@types/react-router-dom": "^5.1.8",
-    "bootstrap": "^5.1.0",
+    "axios": "^0.22.0",
+    "bootstrap": "^5.1.1",
     "history": "^5.0.1",
     "node-sass": "^4.14.1",
     "prettier-plugin-style-order": "^0.2.2",
     "react": "^17.0.2",
-    "react-bootstrap": "^2.0.0-beta.6",
+    "react-bootstrap": "^2.0.0-rc.0",
     "react-cookie": "^4.1.1",
     "react-dom": "^17.0.2",
     "react-floating-label-input": "^4.3.2",
